# istreamreader

./: .gitmodules  CMakeLists.txt  README.md
include/: Exceptions.hpp  FileReadStream.hpp  IReadStream.hpp
src/: FileReadStream.cpp  IReadStream.cpp
tests/: main.cpp  tst_streamreadertest.h
